--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <h4>
+		What is the capital of India?
+	</h4>
+	<input type="radio" id="option1" value="New Delhi">
+	<label for="option1">New Delhi</label><br>
+	<input type="radio" id="option2" value="Mumbai">
+	<label for="option2">Mumbai</label><br>
+	
+	<blockquote id="block" cite="https://en.wikipedia.org/wiki/New_Delhi"> New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
